# enso-ml

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build-image.sh  docker-compose.yml  push-image.sh
.github/workflows/: docker-image.yml
gui/: index.html
src/: handlers.rs  lib.rs  main.rs  models.rs  routes.rs  storage.rs
src/pipelines/: flux.rs  mod.rs  sd.rs
