[package]
name = "enso-ml"
version = "0.1.1"
edition = "2021"
authors = ["Sadovnikov Anton <sadovnikoff@gmail.com>"]

description = "Stable diffusion pipeline service"
repository = "https://github.com/siddthartha/enso-ml"
keywords = ["candle", "deep-learning", "machine-learning", "diffusion", "transformers"]
categories = ["science"]
license = "MIT"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
rust-ini = "0.21.3"
colored = "3.0.0"
log = "0.4.28"
env_logger = "0.11.8"
pretty_env_logger = "0.5.0"
image = "0.25.8"
sha2 = "0.10.9"
hex = "0.4"
anyhow = "1.0"
regex = "1.8.1"
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
base64 = "0.22.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.37.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
warp = { version = "0.4.2", features = ["server"] }
redis = { version = "0.32.5", features = ["aio", "tokio-comp"] }

aws-config = { version = "1.5.9", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.58.0"
aws-types = "1.3.1"

candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
hf-hub = "0.4.1"
tokenizers = "0.22.1"


[lib]
crate-type = ["lib"]
bench = false

#[[bin]]
#name = "ml-cli"
#path = "./src/bin/ml-cli.rs"

[[bin]]
name = "ml-worker"
path = "./src/bin/ml-worker.rs"

[profile.release]
opt-level = 'z'     # Optimize for size.
#lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
